self-modules/networking-eks/internet-gw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  
  tags = {
    Name = "IGW"
    Environment = var.env_tag
  }
}
